--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "bot_message",
+  "name": "node_files_handling",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "startDev": "ts-node-dev src/server.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "prisma": "^5.3.1",
+    "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.3.1",
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0",
+    "@types/multer": "^1.4.7"
+  }
 }
